build_log.log
root@f50a46bb30bc:/DigitalCurling/build# cmake --build . --config RelWithDebInfo
[  1%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_broad_phase.cpp.o
[  2%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_chain_shape.cpp.o
[  4%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_circle_shape.cpp.o
[  5%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_collide_circle.cpp.o
[  6%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_collide_edge.cpp.o
[  8%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_collide_polygon.cpp.o
[  9%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_collision.cpp.o
[ 10%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_distance.cpp.o
[ 12%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_dynamic_tree.cpp.o
[ 13%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_edge_shape.cpp.o
[ 14%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_polygon_shape.cpp.o
[ 16%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/collision/b2_time_of_impact.cpp.o
[ 17%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/common/b2_block_allocator.cpp.o
[ 18%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/common/b2_draw.cpp.o
[ 20%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/common/b2_math.cpp.o
[ 21%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/common/b2_settings.cpp.o
[ 22%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/common/b2_stack_allocator.cpp.o
[ 24%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/common/b2_timer.cpp.o
[ 25%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_body.cpp.o
[ 26%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_chain_circle_contact.cpp.o
[ 28%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_chain_polygon_contact.cpp.o
[ 29%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_circle_contact.cpp.o
[ 30%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_contact.cpp.o
[ 32%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_contact_manager.cpp.o
[ 33%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_contact_solver.cpp.o
[ 34%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_distance_joint.cpp.o
[ 36%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_edge_circle_contact.cpp.o
[ 37%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_edge_polygon_contact.cpp.o
[ 38%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_fixture.cpp.o
[ 40%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_friction_joint.cpp.o
[ 41%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_gear_joint.cpp.o
[ 42%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_island.cpp.o
[ 44%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_joint.cpp.o
[ 45%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_motor_joint.cpp.o
[ 46%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_mouse_joint.cpp.o
[ 48%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_polygon_circle_contact.cpp.o
[ 49%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_polygon_contact.cpp.o
[ 50%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_prismatic_joint.cpp.o
[ 52%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_pulley_joint.cpp.o
[ 53%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_revolute_joint.cpp.o
[ 54%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_weld_joint.cpp.o
[ 56%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_wheel_joint.cpp.o
[ 57%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_world.cpp.o
[ 58%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/dynamics/b2_world_callbacks.cpp.o
[ 60%] Building CXX object extern/box2d/src/CMakeFiles/box2d.dir/rope/b2_rope.cpp.o
[ 61%] Linking CXX static library ../bin/libbox2d.a
[ 61%] Built target box2d
[ 62%] Building CXX object src/CMakeFiles/digital_curling__digital_curling.dir/common.cpp.o
[ 64%] Building CXX object src/CMakeFiles/digital_curling__digital_curling.dir/normal_game.cpp.o
[ 65%] Building CXX object src/CMakeFiles/digital_curling__digital_curling.dir/simulator.cpp.o
[ 66%] Building CXX object src/CMakeFiles/digital_curling__digital_curling.dir/simulator_simple1.cpp.o
[ 68%] Building CXX object src/CMakeFiles/digital_curling__digital_curling.dir/version.cpp.o
[ 69%] Linking CXX static library libdigital_curling__digital_curling.a
[ 69%] Built target digital_curling__digital_curling
[ 70%] Building CXX object extern/box2d/unit-test/CMakeFiles/unit_test.dir/hello_world.cpp.o
[ 72%] Building CXX object extern/box2d/unit-test/CMakeFiles/unit_test.dir/collision_test.cpp.o
[ 73%] Building CXX object extern/box2d/unit-test/CMakeFiles/unit_test.dir/joint_test.cpp.o
[ 74%] Building CXX object extern/box2d/unit-test/CMakeFiles/unit_test.dir/math_test.cpp.o
[ 76%] Building CXX object extern/box2d/unit-test/CMakeFiles/unit_test.dir/world_test.cpp.o
[ 77%] Linking CXX executable ../bin/unit_test
[ 77%] Built target unit_test
[ 78%] Building CXX object apps/server/CMakeFiles/digital_curling__server.dir/log.cpp.o
[ 80%] Building CXX object apps/server/CMakeFiles/digital_curling__server.dir/main.cpp.o
/DigitalCurling/apps/server/main.cpp: In function 'int main(int, char* const*)':
/DigitalCurling/apps/server/main.cpp:78:89: error: 'class std::basic_ostream<char>' has no member named 'str'
   78 |         Log::Debug((Buf() << "log file path: " << std::filesystem::absolute(file_name)).str());
      |                                                                                         ^~~
/DigitalCurling/apps/server/main.cpp:79:69: error: 'class std::basic_ostream<char>' has no member named 'str'
   79 |         Log::Debug((Buf() << "game id: " << server_setting.game_id).str());
      |                                                                     ^~~
/DigitalCurling/apps/server/main.cpp:113:69: error: 'std::basic_ostream<char>::__ostream_type' {aka 'class std::basic_ostream<char>'} has no member named 'str'
  113 |         Log::Debug((Buf() << "port 0: " << listen_endpoint0.port()).str());
      |                                                                     ^~~
/DigitalCurling/apps/server/main.cpp:116:69: error: 'std::basic_ostream<char>::__ostream_type' {aka 'class std::basic_ostream<char>'} has no member named 'str'
  116 |         Log::Debug((Buf() << "port 1: " << listen_endpoint1.port()).str());
      |                                                                     ^~~
make[2]: *** [apps/server/CMakeFiles/digital_curling__server.dir/build.make:90: apps/server/CMakeFiles/digital_curling__server.dir/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:352: apps/server/CMakeFiles/digital_curling__server.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
